<resources>
    <string name="app_name">ASMA</string>
    <string name="alarming_system">Alarming System</string>
    <string name="message">Message :</string>
    <string name="send">SEND</string>
    <string name="User">TODO</string>
    <string name="msg">HELP ME : \nI am currently in danger. I am trying to share my location. Please reach out to me as soon as possible. \nLocation : </string>
    <string name="name">NAME</string>
    <string name="contact_1">Contact 1</string>
    <string name="contact_2">Contact 2</string>
    <string name="save">SAVE</string>
</resources>